--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -1,12 +1,11 @@
 <div class="admin-create-order-container">
-  <form id="form-1" method="post" action="/admin/all-orders/order/created">
+  <div id="form">
     <div class="form-title">
       <p>Thêm đơn hàng mới</p>
     </div>
     <div class="form-group">
       <label for="orderDate">Ngày bán *</label>
       <input type="date" id="orderDate" name="orderDate" required>
-      <span class="form-message"></span>
     </div>
     <div class="form-group">
       <label for="userId">Chọn khách hàng</label>
@@ -38,12 +37,10 @@
     <div class="form-group">
       <label for="note">Ghi chú</label>
       <input type="text" id="note" name="note">
-      <span class="form-message"></span>
     </div>
     <div class="form-group">
       <label>Chọn sản phẩm</label>
       <input type="text"  id="product-search" placeholder="Nhập tên sản phẩm">
-      <span class="form-message"></span>
     </div>
     <div class="products-match">
       {{#each products}}
@@ -87,7 +84,7 @@
     </table>  
 
     <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/create/order.js"></script>
