--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -5,7 +5,7 @@
   </div>
   
   <div class="all-brands">
-    {{#each holderBrands}}
+    {{#each (holderData 8)}}
       <div class="brand loading">
         <a><img loading="lazy"/></a>
       </div>
