--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -52,7 +52,7 @@
   </div>
 
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 10)}}
       {{> product}}
     {{/each}}
   </div>
