--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -9,7 +9,7 @@
   </div>
   
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -22,7 +22,7 @@
   </div>
   
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -35,7 +35,7 @@
   </div>
   
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -48,7 +48,7 @@
   </div>
   
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -61,7 +61,7 @@
   </div>
   
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -74,7 +74,7 @@
   </div>
 
   <div class="products">
-    {{#each holderProducts}}
+    {{#each (holderData 5)}}
       {{> product}}
     {{/each}}
   </div>
@@ -88,7 +88,7 @@
 
   <div class="brands">
     <div class="inner">
-      {{#each holderBrands}}
+      {{#each (holderData 15)}}
       <a class="brand">
         <img loading="lazy">
       </a>
