--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -308,7 +308,7 @@ div.clearfix::after {
   display: flex;
   align-items: center;
   justify-content: center;
-  form#form-1 {
+  div#form {
     width: 100%;
     border: 1px solid black;
     padding: 5px;
