--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-brands-container">  
   <div class="board-title">
-    <p>Thương hiệu: {{totalBrand}}</p>
+    <p></p>
   </div>
 
   <div class="control-bar">
@@ -29,21 +29,9 @@
       <div class="filter">
         <label>Lọc theo:</label>
         <select id="price" class="filter-btn">
-          <option value="">Giá mặc định</option>
+          {{!-- <option value="">Giá mặc định</option>
           <option value="1">Giá tăng dần</option>
-          <option value="-1">Giá giảm dần</option>
-        </select>
-
-        <select id="rate" class="filter-btn">
-          <option value="">Đánh giá mặc định</option>
-          <option value="1">Đánh giá tăng dần</option>
-          <option value="-1">Đánh giá giảm dần</option>
-        </select>
-
-        <select id="saleNumber" class="filter-btn">
-          <option value="">Lượng bán mặc định</option>
-          <option value="1">Lượng bán tăng dần</option>
-          <option value="-1">Lượng bán giảm dần</option>
+          <option value="-1">Giá giảm dần</option> --}}
         </select>
       </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
@@ -62,7 +50,6 @@
       <thead>
         <tr>
           <td style="width:  5%">STT            </td>
-          <td style="width: 20%">Mã Thương hiệu </td>
           <td style="width: 15%">Tên Thương Hiệu</td>
           <td style="width: 15%">Tổng Sản Phẩm  </td>
           <td style="width: 15%">Tổng Lượng Bán </td>
@@ -72,18 +59,15 @@
       </thead>
 
       <tbody>
-        {{#each brands}}
+        {{#each (holderData 10)}}
           <tr>
-            <td>{{addIndex @index 1}}</td>
-            <td>{{this._id}}</td>
-            <td style="display: flex; justify-content: start;align-items: center;gap: 5px">
-              <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
-              <p>{{this.name}}</p>
-            </td> 
-            <td>{{this.totalProduct}}</td>
-            <td>{{this.totalProduct}}</td>
-            <td>{{formatNumber this.totalRevenue}}</td>
-            <td><a href="/admin/all-brands/brand/{{this._id}}">Xem</a></td>
+            <td></td>
+            <td class="loading"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
         {{/each}}
       </tbody>
