--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-employees-container">  
   <div class="board-title">
-    <p>Nhân sự: {{totalEmployee}}</p>
+    <p></p>
   </div>
 
   <div class="control-bar">
@@ -24,16 +24,10 @@
         <label>Lọc theo:</label>
         <select id="role" class="filter-btn">
           <option value="">Vị trí</option>
-          {{#each positions}}
-          <option value="{{this.code}}">{{this.name}}</option>
-          {{/each}}
         </select>
 
         <select id="storeCode" class="filter-btn">
           <option value="">Cửa hàng</option>
-          {{#each stores}}
-          <option value="{{this.code}}">{{this.name}}</option>
-          {{/each}}
         </select>
       </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
@@ -52,25 +46,24 @@
       <thead>
         <tr>
           <td style="width:  5%">STT          </td>
-          <td style="width: 15%">Mã nhân viên </td>
-          <td style="width: 20%">Tên nhân viên</td>
+          <td style="width: 20%">Mã nhân viên </td>
+          <td style="width: 25%">Tên nhân viên</td>
           <td style="width: 10%">Email        </td>
           <td style="width: 30%">Địa chỉ      </td>
-          <td style="width: 10%">Chức vụ      </td>
           <td style="width: 10%">Chi tiết     </td>
         </tr>
       </thead>
 
       <tbody>
-        {{#each employees}}
+        {{#each (holderData 10)}}
           <tr>
-            <td>{{addIndex @index 1}}</td>
-            <td>{{this._id}}</td>
-            <td>{{this.name}}</td>
-            <td>{{this.email}}</td>
-            <td>{{this.address}}</td>
-            <td>{{formatRole this.role}}</td>
-            <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
+            <td></td>
+            <td class="loading"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
         {{/each}}
       </tbody>
