--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-orders-container">  
   <div class="board-title">
-    <p>Đơn Hàng: {{totalOrder}}</p>
+    <p></p>
   </div>
   
   <div class="control-bar">
@@ -24,16 +24,10 @@
         <label>Lọc theo:</label>
         <select id="status" class="filter-btn">
           <option value="">Trạng thái đơn</option>
-          {{#each orderStatuses}}
-          <option value="{{this.code}}">{{this.name}}</option>
-          {{/each}}
         </select>
 
         <select id="paymentMethod" class="filter-btn">
           <option value="">Phương thức thanh toán</option>
-          {{#each paymentMethods}}
-          <option value="{{this.code}}">{{this.name}}</option>
-          {{/each}}
         </select>
       </div>
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
@@ -52,25 +46,24 @@
       <thead>
         <tr>
           <td style="width:  5%">STT           </td>
-          <td style="width: 20%">Mã Đơn Hàng   </td>
-          <td style="width: 20%">Tên Khách Hàng</td>
-          <td style="width: 10%">Tổng Số Tiền  </td>
-          <td style="width: 15%">Ngày Đặt Hàng </td>
-          <td style="width: 20%">Tình Trạng    </td>
+          <td style="width: 25%">Mã Đơn Hàng   </td>
+          <td style="width: 25%">Tên Khách Hàng</td>
+          <td style="width: 15%">Tổng Số Tiền  </td>
+          <td style="width: 20%">Ngày Đặt Hàng </td>
           <td style="width: 10%">Chi tiết      </td>
         </tr>
       </thead>
 
       <tbody>
-        {{#each orders}}
+        {{#each (holderData 10)}}
         <tr>
-          <td>{{addIndex @index 1}}</td>
-          <td>{{this._id}}</td>
-          <td>{{this.customerInfo.name}}</td>
-          <td>{{formatNumber this.totalOrderPrice}}</td>
-          <td>{{formatDate this.createdAt}}</td>
-          <td>{{formatStatus this.status}}</td>
-          <td><a href="/admin/all-orders/order/{{this._id}}">Xem</a></td>
+          <td></td>
+          <td class="loading"></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         {{/each}}
       </tbody>
