--- a/src/resource/views/admin/create/brand.hbs
+++ b/src/resource/views/admin/create/brand.hbs
@@ -1,5 +1,5 @@
 <div class="admin-create-brand-container">
-  <form id="form-1" method="post" action="/admin/all-brands/brand/created">
+  <div id="form">
     <div class="form-title">
       <p>Thêm thương hiệu mới</p>
     </div>
@@ -7,19 +7,16 @@
     <div class="form-group">
       <label for="name">Tên thương hiệu</label>
       <input type="text" class="form-control" id="name" name="name" placeholder="VD: Obagi">
-      <span class="form-message"></span>
     </div>
 
     <div class="form-group">
       <label for="description">Mô tả thương hiệu</label>
       <input type="text" class="form-control" id="description" name="description" placeholder="VD: Obagi - dược mỹ phẩm hàng đầu trong việc điều trị ...">
-      <span class="form-message"></span>
     </div>
 
     <div class="form-group">
       <label for="details">Chi tiết thương hiệu</label>
       <input type="text" class="form-control" id="details" name="details" placeholder="VD: Obagi là thương hiệu mỹ phẩm nổi tiếng của Mỹ, được các chuyên gia da liễu khuyên dùng ">
-      <span class="form-message"></span>
     </div>
 
     <div class="form-group">
@@ -28,7 +25,7 @@
     </div>
 
     <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/create/brand.js"></script>
