--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -10,23 +10,20 @@
   </div>
   
   <div class="admin-button">
-    <a href="/admin" class="sidebar-button" id="home-page"><i class="fi fi-rr-home"></i><p>Trang chủ</p></a>
-    <a href="/admin/all-customers" class="sidebar-button" id="customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
-    <a href="/admin/all-chats" class="sidebar-button" id="chats"><i class="fi fi-rr-comment"></i></i><p>Chat</p></a>
-    <a href="/admin/all-purchases" class="sidebar-button" id="purchases"><i class="fi fi-rr-file-import"></i><p>Nhập hàng</p></a>
-    <a href="/admin/all-orders" class="sidebar-button" id="orders"><i class="fi fi-rr-piggy-bank"></i><p>Bán Hàng</p></a>
-    <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng</p></a>
-    <a href="/admin/all-products" class="sidebar-button" id="products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
-    <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-employees"></i><p>Nhân sự</p></a>
-    <a href="/admin/all-suppliers" class="sidebar-button" id="suppliers"><i class="fi fi-rr-supplier"></i><p>Đối tác</p></a>
-    <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-brand"></i><p>Thương hiệu</p></a>
+    <a href="/admin" class="sidebar-button" id="home"><i class="fi fi-rr-home"></i><p>Trang chủ</p></a>
+    <a href="/admin/all-customers" class="sidebar-button" id="all-customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
+    <a href="/admin/all-chats" class="sidebar-button" id="all-chats"><i class="fi fi-rr-comment"></i></i><p>Chat</p></a>
+    <a href="/admin/all-purchases" class="sidebar-button" id="all-purchases"><i class="fi fi-rr-file-import"></i><p>Nhập hàng</p></a>
+    <a href="/admin/all-orders" class="sidebar-button" id="all-orders"><i class="fi fi-rr-piggy-bank"></i><p>Đơn Hàng</p></a>
+    <a href="/admin/all-stores" class="sidebar-button" id="all-stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng</p></a>
+    <a href="/admin/all-products" class="sidebar-button" id="all-products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
+    <a href="/admin/all-employees" class="sidebar-button" id="all-employees"><i class="fi fi-rr-employees"></i><p>Nhân sự</p></a>
+    <a href="/admin/all-suppliers" class="sidebar-button" id="all-suppliers"><i class="fi fi-rr-supplier"></i><p>Đối tác</p></a>
+    <a href="/admin/all-brands" class="sidebar-button" id="all-brands"><i class="fi fi-rr-brand"></i><p>Thương hiệu</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
     <a href="/admin/profile" class="sidebar-button" id="profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/admin/log-out" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
   </div>
 </div>
 
-<script>
-  var index = '{{index}}'
-</script>
 <script src="/js/partials/adminSidebar.js"></script>
