--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -1,44 +1,30 @@
 <div class="admin-create-purchase-container">
   <div id="form">
     <div class="form-title"><p>Thêm đơn nhập mới</p></div>
+
     <div class="form-group">
       <label for="purchaseDate">Ngày nhập *</label>
-      <input type="date" id="purchaseDate" name="purchaseDate" required>
+      <input type="date" id="purchaseDate" name="purchaseDate">
     </div>
+
     <div class="form-group">
-      <label for="name">Chọn nhà cung cấp</label>
-      <select name="supplierId" id="supplierId" required>
+      <label for="supplierId">Chọn nhà cung cấp</label>
+      <select name="supplierId" id="supplierId">
         <option value="" selected disabled>-- Nhà cung cấp --</option>
-        {{#each suppliers}}
-          <option value="{{this._id}}">{{this.name}} {{this.phone}}</option>
-        {{/each}}
       </select>
     </div>
+
     <div class="form-group">
       <label for="note">Ghi chú</label>
       <input type="text" id="note" name="note">
     </div>
+
     <div class="form-group">
       <label>Chọn sản phẩm</label>
       <input type="text"  id="product-search" placeholder="Nhập tên sản phẩm">
     </div>
-    <div class="products-match">
-      {{#each products}}
-        <div class="product" style="display: none">
-          <p style="display: none" id="product-id">{{this._id}}</p>
-          <p style="width: 15%">{{this.brand}}</p>
-          <p 
-            style="width: 65%; display:flex; align-items:center; justify-content:start; gap:5px"
-            id="product-name"
-          >
-            <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
-            {{this.name}}
-          </p>  
-          <p style="width: 10%;">{{this.categories}}</p>
-          <p style="width: 10%; text-align:right" id="product-price">{{this.purchasePrice}}</p>
-        </div>
-      {{/each}}
-    </div>
+
+    <div class="products-match"></div>
 
     <table>
       <thead>
