--- a/src/resource/views/admin/all/chat.hbs
+++ b/src/resource/views/admin/all/chat.hbs
@@ -23,9 +23,8 @@
         <div class="last-active"></div>
       </div>
     </div>
-    <ul class="chat-content">
-      <li>Chọn đoạn chat</li>
-    </ul>
+
+    <div class="chat-content"></div>
     
     <form class="input-form">
       <textarea name="input" class="input" placeholder="Aa"></textarea>
