--- a/src/resource/views/admin/detail/brand.hbs
+++ b/src/resource/views/admin/detail/brand.hbs
@@ -1,5 +1,5 @@
 <div class="brand-details-container">
-  <form id="form-2" method="POST" action="/admin/all-brands/brand/updated/{{brandInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN THƯƠNG HIỆU</td></tr>
@@ -53,7 +53,7 @@
     </table>
 
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/brand.js"></script>
