--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -1,5 +1,5 @@
 <div class="employee-details-container">
-  <form id="form-2" method="POST" action="/admin/all-employees/employee/updated/{{employeeInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN NHÂN VIÊN</td></tr>
@@ -58,7 +58,7 @@
     </table>
     
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/employee.js"></script>
