--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -1,5 +1,5 @@
 <div class="product-details-container">
-  <form id="form-2" method="POST" action="/admin/all-products/product/updated/{{productInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN SẢN PHẨM</td></tr>
@@ -97,7 +97,7 @@
     </table>
     
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div> 
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/product.js"></script>
