--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -1,5 +1,5 @@
 <div class="profile-details-container">
-  <form id="form-2" method="POST" action="/admin/profile/updated/{{userInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN CÁ NHÂN</td></tr>
@@ -30,7 +30,7 @@
     </table>
     
     <div class="submit-button"><button type="submit">Cập Nhật</button></div>  
-  </form>
+  </div>
 </div>   
 
 <script src="/js/admin/detail/profile.js"></script>
