--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -1,5 +1,5 @@
 <div class="store-details-container">
-  <form id="form-2" method="POST" action="/admin/all-stores/store/updated/{{storeInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN CỬA HÀNG</td></tr>
@@ -51,7 +51,7 @@
     </table>
 
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/store.js"></script>
