--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -1,5 +1,5 @@
 <div class="customer-details-container">
-  <form id="form-2" method="POST" action="/admin/all-suppliers/supplier/updated/{{supplierInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN NHÀ CUNG CẤP</td></tr>
@@ -59,7 +59,7 @@
     </table>
 
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/supplier.js"></script>
