--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -5,7 +5,7 @@
       <p class="form-title">Đăng nhập nhân viên</p>
       <form id="form-1">
         <div class="form-group">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+          <input type="email" class="form-control" id="email" name="email" placeholder="Email">
           <span class="form-message"></span>
         </div>
 
