--- a/src/public/css/admin/allChats.css
+++ b/src/public/css/admin/allChats.css
@@ -1,8 +1,8 @@
 .admin-all-chats-container {
   height: 100vh;
-  gap: 5px;
   display: flex;
   align-items: center;
+  gap: 5px;
   .chat-sidebar {
     box-sizing: border-box;
     width: 20%;
@@ -12,9 +12,9 @@
     padding: 5px;
     .chat-header{
       width: 100%;
-      height: 50px;
+      height: 10%;
       padding: 10px;
-      margin-top: 5px;
+      box-sizing: border-box;
       display: flex;
       align-items: center;
       justify-content: start;
@@ -34,11 +34,13 @@
       outline: 1.5px solid #D1A6A6;
     }
     .chat-list {
-      margin-top: 5px;
       width: 100%;
       display: flex;
       flex-direction: column;
       gap: 5px;
+      height: 85%;
+      overflow-y: scroll;
+      box-sizing: border-box;
       .item {
         width: 100%;
         height: 80px;
@@ -66,6 +68,7 @@
         filter: brightness(80%)
       }
     }
+    .chat-list::-webkit-scrollbar {display: none}
   }
   .chat-body {
     box-sizing: border-box;
