--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -338,7 +338,7 @@ div.clearfix::after {
   25%   {opacity: 1; top: 5%}
   50%   {opacity: 1; top: 5%}
   75%   {opacity: 1; top: 5%}
-  100%  {opacity: 0; top: 0}
+  100%  {opacity: 0; top: 5%}
 }
 
 @keyframes flicker {
