--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -14,6 +14,7 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
+    position: relative;
     .image-box {
       display: flex;
       align-items: center;
@@ -119,6 +120,7 @@
     white-space: pre-line;
     padding: 0 15px;
     box-sizing: border-box;
+    position: relative;
     h3 {
       padding: 5px;
       margin-block-start: 0;
@@ -161,7 +163,6 @@
       }
     }
   }
-  
   .comment-box {
     padding: 5px;
     box-sizing: border-box;
@@ -188,6 +189,17 @@
     width: 95%;
     overflow: hidden;
     .products {padding: 5px 0;}
+  }
+  .loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+    z-index: 2;
+    animation: flicker 1s infinite;
   }
 }
 @media screen and (max-width: 700px) {
