--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -11,27 +11,18 @@
       <label for="userId">Chọn khách hàng</label>
       <select name="userId" id="userId" required>
         <option value="" selected disabled>-- Khách hàng --</option>
-        {{#each users}}
-          <option value="{{this._id}}">{{this.userInfo.name}}, {{this.userInfo.address}}</option>
-        {{/each}}
       </select>
     </div>
     <div class="form-group">
       <label for="storeId">Chọn cửa hàng</label>
       <select name="storeId" id="storeId" required>
         <option value="" selected disabled>-- Cửa hàng --</option>
-        {{#each stores}}
-          <option value="{{this._id}}">{{this.name}}</option>
-        {{/each}}
       </select>
     </div>
     <div class="form-group">
       <label for="paymentMethod">Chọn phương thức thanh toán</label>
       <select name="paymentMethod" id="paymentMethod" required>
         <option value="" selected disabled>-- Phương thức thanh toán --</option>
-        {{#each paymentMethods}}
-          <option value="{{this.code}}">{{this.name}}</option>
-        {{/each}}
       </select>
     </div>
     <div class="form-group">
@@ -42,23 +33,7 @@
       <label>Chọn sản phẩm</label>
       <input type="text"  id="product-search" placeholder="Nhập tên sản phẩm">
     </div>
-    <div class="products-match">
-      {{#each products}}
-        <div class="product" style="display: none">
-          <p style="display: none" id="product-id">{{this._id}}</p>
-          <p style="width: 15%">{{this.brand}}</p>
-          <p 
-            style="width: 65%; display:flex; align-items:center; justify-content:start; gap:5px"
-            id="product-name"
-          >
-            <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
-            {{this.name}}
-          </p>  
-          <p style="width: 10%;">{{this.categories}}</p>
-          <p style="width: 10%; text-align:right" id="product-price">{{this.price}}</p>
-        </div>
-      {{/each}}
-    </div>
+    <div class="products-match"></div>
 
     <table>
       <thead>
