--- a/src/resource/views/admin/detail/customer.hbs
+++ b/src/resource/views/admin/detail/customer.hbs
@@ -1,28 +1,28 @@
 <div class="customer-details-container">
-  <form id="form-2" method="POST" action="/admin/all-customers/customer/updated/{{customerInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN KHÁCH HÀNG</td></tr>
       </thead>
       <tr>
         <td>Mã Khách Hàng</td>
-        <td>{{customerInfo._id}}</td>
+        <td><input type="text" id="id" name="id" disabled></td>
       </tr>
       <tr>
         <td>Tên Khách Hàng</td>
-        <td><input type="text" id="name" name="name" value="{{customerInfo.name}}"></td>
+        <td><input type="text" id="name" name="name"></td>
       </tr>
       <tr>
         <td>Email</td>
-        <td><input type="text" id="email" name="email" value="{{customerInfo.email}}"></td>
+        <td><input type="text" id="email" name="email"></td>
       </tr>
       <tr>
         <td>SĐT</td>
-        <td><input type="text" id="phone" name="phone" value="{{customerInfo.phone}}"></td>
+        <td><input type="text" id="phone" name="phone"></td>
       </tr>
       <tr>
         <td>Địa Chỉ</td>
-        <td><input type="text" id="address" name="address" value="{{customerInfo.address}}"></td>
+        <td><input type="text" id="address" name="address"></td>
       </tr>
       <tr>
         <td>Giới tính</td>
@@ -33,15 +33,15 @@
       </tr>
       <tr>
         <td>Tổng đơn hàng</td>
-        <td>{{customerInfo.quantity}}</td>
+        <td><input type="text" id="quantity" name="quantity" disabled></td>
       </tr>
       <tr>
         <td>Tổng chi tiêu</td>
-        <td>{{formatNumber customerInfo.revenue}}</td>
+        <td><input type="text" id="revenue" name="revenue" disabled></td>
       </tr>
       <tr>
         <td>Hạng thành viên</td>
-        <td>{{memberInfo.name}}</td>
+        <td><input type="text" id="member" name="member" disabled></td>
       </tr>
     </table>
 
@@ -58,21 +58,11 @@
           <td style="width: 10%">Chi tiết              </td>
         </tr>
       </thead>
-      <tbody>
-        {{#each orderInfo}}
-        <tr>
-          <td>{{addIndex @index 1}}</td>
-          <td>{{formatNumber this.totalOrderPrice}}</td>
-          <td>{{formatPaymentMethod this.paymentMethod}}</td>
-          <td>{{this.orderStatus.name}}</td>
-          <td><a href="/admin/all-orders/order/{{this._id}}">Xem</a></td>
-        </tr>
-        {{/each}}
-      </tbody>
+      <tbody></tbody>
     </table>
 
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>
+  </div>
 </div>
 
 <script src="/js/admin/detail/customer.js"></script>
