--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -1,5 +1,5 @@
 <div class="order-details-container">
-  <form id="form-2" method="POST" action="/admin/all-orders/order/updated/{{orderInfo._id}}?_method=PUT">
+  <div id="form">
     <table id="table-1">
       <thead>
         <tr><td colspan="2">THÔNG TIN ĐƠN HÀNG</td></tr>
@@ -79,7 +79,7 @@
     </table>
     
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
-  </form>     
+  </div>     
 </div>
 
 <script src="/js/admin/detail/order.js"></script>
