--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -5,6 +5,10 @@
         <tr><td colspan="2">THÔNG TIN SẢN PHẨM</td></tr>
       </thead>
       <tr>
+        <td>Id sản phẩm</td>
+        <td><input type="text" id="id" disabled></td>
+      <tr>
+      <tr>
         <td>Loại Sản Phẩm</td>
         <td>
           <select name="categories" id="categories">
@@ -36,63 +40,50 @@
       </tr>
       <tr>
         <td>Hãng</td>
-        <td>
-          <select name="brand" id="brand">
-            {{#each brands}}
-            <option value="{{this.name}}">{{this.name}}</option>
-            {{/each}}
-          </select>
-        </td>
-      </tr>
+        <td><select name="brand" id="brand"></select></td>
       <tr>
         <td>Tên</td>
-        <td><input type="text" id="name" name="name" value="{{productInfo.name}}"></td>
+        <td><input type="text" id="name"></td>
       </tr>
       <tr>
         <td>Giá nhập</td>
-        <td><input type="text" id="purchasePrice" name="purchasePrice" value="{{formatNumber productInfo.purchasePrice}}"></td>
+        <td><input type="text" id="purchasePrice"></td>
       </tr>
       <tr>
         <td>Giá bán cũ</td>
-        <td><input type="text" id="oldPrice" name="oldPrice" value="{{formatNumber productInfo.oldPrice}}"></td>
+        <td><input type="text" id="oldPrice"></td>
       </tr>
       <tr>
         <td>Giá bán mới</td>
-        <td><input type="text" id="price" name="price" value="{{formatNumber productInfo.price}}"></td>
+        <td><input type="text" id="price"></td>
       </tr>
       <tr>
         <td>Mô tả</td>
-        <td><input type="text" id="description" name="description" value="{{productInfo.description}}"></td>
+        <td><input type="text" id="description"></td>
       </tr>
       <tr>
         <td>Chi tiết</td>
-        <td><input type="text" id="details" name="details" value="{{productInfo.details}}"></td>
+        <td><input type="text" id="details"></td>
       </tr>
       <tr>
         <td>Số lượng</td>
-        <td><input type="text" id="quantity" name="quantity" value="{{productInfo.quantity}}"></td>
+        <td><input type="text" id="quantity"></td>
       </tr>
       <tr>
         <td>Đánh giá</td>
-        <td><input type="text" id="rate" name="rate" value="{{productInfo.rate}}/5" disabled></td>
+        <td><input type="text" id="rate" disabled></td>
       </tr>
       <tr>
         <td>Lượt bán</td>
-        <td><input type="text" id="saleNumber" name="saleNumber" value="{{productInfo.saleNumber}}" disabled></td>
+        <td><input type="text" id="saleNumber" disabled></td>
       </tr>
       <tr>
         <td>Lượt đánh giá</td>
-        <td><input type="text" id="rateNumber" name="rateNumber" value="{{productInfo.rateNumber}}" disabled></td>
+        <td><input type="text" id="rateNumber" disabled></td>
       </tr>
       <tr>
         <td>Tình trạng sản phẩm</td>
-        <td>
-          <select name="status" id="status">
-            {{#each productStatuses}}
-            <option value="{{this.code}}">{{this.name}}</option>
-            {{/each}}
-          </select>
-        </td>
+        <td><select name="status" id="status"></select></td>
       </tr>
     </table>
     
