--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -2,15 +2,31 @@
   <div id="form">
     <table id="table-1">
       <thead>
-        <tr><td colspan="2">THÔNG TIN CÁ NHÂN</td></tr>
+        <tr><td colspan="2">THÔNG TIN NHÂN VIÊN</td></tr>
       </thead>
       <tr>
-        <td>Mã nhân viên</td>
-        <td>{{userInfo._id}}</td>
+        <td>Mã Nhân Viên</td>
+        <td><input type="text" id="id" disabled></td>
       </tr>
       <tr>
-        <td>Tên nhân viên</td>
-        <td><input type="text" id="name" name="name" value="{{userInfo.name}}"></td>
+        <td>Tên Nhân Viên</td>
+        <td><input type="text" id="name"></td>
+      </tr>
+      <tr>
+        <td>Vị trí</td>
+        <td><select name="role" id="role"></select></td>
+      </tr>
+      <tr>
+        <td>Email</td>
+        <td><input type="text" id="email" name="email"></td>
+      </tr>
+      <tr>
+        <td>SĐT</td>
+        <td><input type="text" id="phone" name="phone"></td>
+      </tr>
+      <tr>
+        <td>Địa Chỉ</td>
+        <td><input type="text" id="address" name="address"></td>
       </tr>
       <tr>
         <td>Giới tính</td>
@@ -20,16 +36,16 @@
         </td>
       </tr>
       <tr>
-        <td>Số điện thoại</td>
-        <td><input type="text" id="phone" name="phone" value="{{userInfo.phone}}"></td>
+        <td>Cửa hàng làm việc</td>
+        <td><select name="store" id="store"></select></td>
       </tr>
       <tr>
-        <td>Địa Chỉ</td>
-        <td><input type="text" id="address" name="address" value="{{userInfo.address}}"></td>
+        <td>Ngày vào làm</td>
+        <td><input type="text" id="date" name="date" disabled></td>
       </tr>
     </table>
     
-    <div class="submit-button"><button type="submit">Cập Nhật</button></div>  
+    <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
   </div>
 </div>   
 
