--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -6,23 +6,23 @@
       </thead>
       <tr>
         <td>Mã Cửa hàng</td>
-        <td>{{storeInfo._id}}</td>
+        <td><input type="text" id="id" disabled></td>
       </tr>
       <tr>
         <td>Tên cửa hàng</td>
-        <td><input type="text" id="name" name="name" value="{{storeInfo.name}}"></td>
+        <td><input type="text" id="name"></td>
       </tr>
       <tr>
         <td>Địa chỉ cửa hàng</td>
-        <td><input type="text" id="address" name="address" value="{{storeInfo.address}}"></td>
+        <td><input type="text" id="address"></td>
       </tr>
       <tr>
         <td>Mô tả chi tiết</td>
-        <td><input type="text" id="details" name="details" value="{{storeInfo.details}}"></td>
+        <td><input type="text" id="details"></td>
       </tr>
       <tr>
         <td>Doanh thu cửa hàng</td>
-        <td>{{formatNumber storeInfo.revenue}}</td>
+        <td><input type="text" id="total" disabled></td>
       </tr>
     </table>
 
@@ -38,16 +38,7 @@
           <td>Chi tiết       </td>
         </tr>
       </thead>
-      <tbody>
-        {{#each employeesInfo}}
-        <tr>
-          <td>{{this._id}}</td>
-          <td>{{this.userInfo.name}}</td>
-          <td>{{formatRole this.loginInfo.role}}</td>
-          <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
-        </tr>
-        {{/each}}
-      </tbody>
+      <tbody></tbody>
     </table>
 
     <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div>
